<resources>
    sources>
    <string name="app_name">DFSL</string>
    <!--    navigation bar-->
    <!--    -->

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="notes_gallery">Notes Gallery</string>
    <string name="books">Books</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="disclaimer">Disclaimer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_authenticate">Authenticate</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_books">Books</string>
    <string name="title_activity_contact_us">ContactUS</string>
    <string name="title_activity_disclaimer">Disclaimer</string>
    <string name="title_activity_index">Index</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_more_apps">MoreApps</string>
    <string name="title_activity_notes">Notes</string>

</resources>