<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        tools:ignore="ExtraText">
        <item
            android:id="@+id/ID_menuList_Home"
            android:title="@string/home"/>
        <item
            android:id="@+id/ID_menuList_aboutUS"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/ID_menuList_disclaimer"
            android:title="@string/disclaimer"/>
        <item
            android:id="@+id/ID_menuList_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/ID_menuList_moreApps"
            android:title="@string/more_apps"/>
        <item
            android:id="@+id/ID_menuList_rateUS"
            android:title="@string/rate_the_app"/>
        <item
            android:id="@+id/ID_menuList_feedBack"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/ID_menuList_Policies"
            android:title="@string/privacy_policies"/>
        <item
            android:id="@+id/ID_menuList_contactUs"
            android:title="@string/contact_us"/>
    </group>
</menu>